[gd_scene load_steps=5 format=3 uid="uid://0gmqk6pvacyl"]

[ext_resource type="Script" uid="uid://yaw53fs6ysyt" path="res://enemies/beam_enemy/beam_enemy.gd" id="1_bcwvd"]
[ext_resource type="PackedScene" uid="uid://dv620i700bxfe" path="res://enemies/beam_enemy/beam_pod.tscn" id="2_ulw1k"]
[ext_resource type="PackedScene" uid="uid://bs48mw0qglkar" path="res://shared/death_explosion.tscn" id="3_8aite"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ulw1k"]
radius = 18.0

[node name="BeamEnemy" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_bcwvd")
speed = 150.0
health = 40.0

[node name="BeamPod2" parent="." instance=ExtResource("2_ulw1k")]
unique_name_in_owner = true
position = Vector2(0, -10)
rotation = 1.5708

[node name="BeamPod3" parent="." instance=ExtResource("2_ulw1k")]
unique_name_in_owner = true
position = Vector2(12, 0)
rotation = 3.14159

[node name="BeamPod4" parent="." instance=ExtResource("2_ulw1k")]
unique_name_in_owner = true
position = Vector2(0, 9)
rotation = 4.71239

[node name="BeamPod" parent="." instance=ExtResource("2_ulw1k")]
unique_name_in_owner = true
position = Vector2(-12, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ulw1k")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Explosions" parent="." instance=ExtResource("3_8aite")]
unique_name_in_owner = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
